cmake_minimum_required(VERSION 3.5.1)

set (PROJECT_NAME "minko-plugin-${PLUGIN}")

#do a function
set (OUTPUT_PATH
    "${CMAKE_CURRENT_BINARY_DIR}/bin/${SYSTEM_NAME}${BITNESS}/${BUILD_TYPE}"
)

set (CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${OUTPUT_PATH})
set (CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${OUTPUT_PATH})
set (CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${OUTPUT_PATH})


file(GLOB_RECURSE
    ${PROJECT_NAME}_SRC
    "${CMAKE_CURRENT_SOURCE_DIR}/lib/*.hpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/lib/*.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/lib/*.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/lib/*.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/include/*.hpp"
)

file(GLOB
    ${PROJECT_NAME}_INCLUDE
    "${CMAKE_CURRENT_SOURCE_DIR}/include"
    "${CMAKE_CURRENT_SOURCE_DIR}/src"
    "${CMAKE_CURRENT_SOURCE_DIR}/lib/lodepng/src"
)

if(WIN32)
    add_definitions("-D_CRT_SECURE_NO_WARNINGS")
endif()

add_library (${PROJECT_NAME}
    STATIC
    ${${PROJECT_NAME}_SRC}
)

target_include_directories (${PROJECT_NAME}
    PUBLIC
    ${FRAMEWORK_INCLUDES}
    ${${PROJECT_NAME}_INCLUDE}
)